hnv/tests/fake/response/bgp_routers.json
{
    "value": [
        {
            "resourceRef": "/VirtualGateways/VirtualGateway_1/BgpRouters/router1",
            "resourceId": "router1",
            "etag": "W/\"5fb62acf-04c7-4071-9f06-c89ea8b0b1b0\"",
            "instanceId": "dc972df1-cce2-44b7-a0e4-df6f882b101a",
            "properties": {
                "provisioningState": "Succeeded",
                "isEnabled": true,
                "requireIgpSync": true,
                "extAsNumber": "0.3458",
                "routerId": "10.2.2.2",
                "routerIP": [
                    "10.2.2.2"
                ],
                "isGenerated": false,
                "bgpPeers": [
                    {
                        "resourceRef": "/VirtualGateways/VirtualGateway_1/BgpRouters/router1/BgpPeers/Peer1",
                        "resourceId": "Peer1",
                        "etag": "W/\"5fb62acf-04c7-4071-9f06-c89ea8b0b1b0\"",
                        "instanceId": "cb4a4eba-9716-4d22-bd51-50998181e3a8",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "asNumber": "1236",
                            "extAsNumber": "0.1236",
                            "peerIpAddress": "40.1.1.4",
                            "connectionState": "Disconnected",
                            "statistics": {
                                "tcpConnectionClosed": "2016-06-15T22:01:03.186-07:00",
                                "openMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "notificationMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "keepAliveMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "routeRefreshMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "updateMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "ipv4Route": {
                                    "updateSentCount": 0,
                                    "updateReceivedCount": 0,
                                    "withdrawlSentCount": 0,
                                    "withdrawlReceivedCount": 0
                                },
                                "ipv6Route": {
                                    "updateSentCount": 0,
                                    "updateReceivedCount": 0,
                                    "withdrawlSentCount": 0,
                                    "withdrawlReceivedCount": 0
                                },
                                "lastUpdated": "2016-06-16T05:01:33.2899007Z"
                            },
                            "isGenerated": false
                        }
                    },
                    {
                        "resourceRef": "/VirtualGateways/VirtualGateway_1/BgpRouters/router1/BgpPeers/Peer2",
                        "resourceId": "Peer2",
                        "etag": "W/\"5fb62acf-04c7-4071-9f06-c89ea8b0b1b0\"",
                        "instanceId": "d85b9574-8d53-4b70-8b4b-4053eaeeba60",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "asNumber": "1236",
                            "extAsNumber": "0.1236",
                            "peerIpAddress": "40.1.2.4",
                            "connectionState": "Disconnected",
                            "statistics": {
                                "tcpConnectionClosed": "2016-06-15T22:01:21.091-07:00",
                                "openMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "notificationMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "keepAliveMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "routeRefreshMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "updateMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "ipv4Route": {
                                    "updateSentCount": 0,
                                    "updateReceivedCount": 0,
                                    "withdrawlSentCount": 0,
                                    "withdrawlReceivedCount": 0
                                },
                                "ipv6Route": {
                                    "updateSentCount": 0,
                                    "updateReceivedCount": 0,
                                    "withdrawlSentCount": 0,
                                    "withdrawlReceivedCount": 0
                                },
                                "lastUpdated": "2016-06-16T05:01:33.2899007Z"
                            },
                            "isGenerated": false
                        }
                    },
                    {
                        "resourceRef": "/VirtualGateways/VirtualGateway_1/BgpRouters/router1/BgpPeers/Peer3",
                        "resourceId": "Peer3",
                        "etag": "W/\"5fb62acf-04c7-4071-9f06-c89ea8b0b1b0\"",
                        "instanceId": "3b7e4db3-c415-4b06-8d0a-b2138142a8ff",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "asNumber": "1236",
                            "extAsNumber": "0.1236",
                            "peerIpAddress": "40.1.3.4",
                            "connectionState": "Disconnected",
                            "statistics": {
                                "tcpConnectionClosed": "2016-06-15T22:01:27.67-07:00",
                                "openMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "notificationMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "keepAliveMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "routeRefreshMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "updateMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "ipv4Route": {
                                    "updateSentCount": 0,
                                    "updateReceivedCount": 0,
                                    "withdrawlSentCount": 0,
                                    "withdrawlReceivedCount": 0
                                },
                                "ipv6Route": {
                                    "updateSentCount": 0,
                                    "updateReceivedCount": 0,
                                    "withdrawlSentCount": 0,
                                    "withdrawlReceivedCount": 0
                                },
                                "lastUpdated": "2016-06-16T05:01:33.2899007Z"
                            },
                            "isGenerated": false
                        }
                    }
                ],
                "configurationState": {
                    "status": "Success",
                    "lastUpdatedTime": "2016-06-15T21:34:32.1843967-07:00"
                }
            }
        },
        {
            "resourceRef": "/VirtualGateways/VirtualGateway_1/BgpRouters/router1",
            "resourceId": "router1",
            "etag": "W/\"5fb62acf-04c7-4071-9f06-c89ea8b0b1b0\"",
            "instanceId": "dc972df1-cce2-44b7-a0e4-df6f882b101a",
            "properties": {
                "provisioningState": "Succeeded",
                "isEnabled": true,
                "requireIgpSync": true,
                "extAsNumber": "0.3458",
                "routerId": "10.2.2.2",
                "routerIP": [
                    "10.2.2.2"
                ],
                "isGenerated": false,
                "bgpPeers": [
                    {
                        "resourceRef": "/VirtualGateways/VirtualGateway_1/BgpRouters/router1/BgpPeers/Peer1",
                        "resourceId": "Peer1",
                        "etag": "W/\"5fb62acf-04c7-4071-9f06-c89ea8b0b1b0\"",
                        "instanceId": "cb4a4eba-9716-4d22-bd51-50998181e3a8",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "asNumber": "1236",
                            "extAsNumber": "0.1236",
                            "peerIpAddress": "40.1.1.4",
                            "connectionState": "Disconnected",
                            "statistics": {
                                "tcpConnectionClosed": "2016-06-15T21:56:27.063-07:00",
                                "openMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "notificationMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "keepAliveMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "routeRefreshMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "updateMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "ipv4Route": {
                                    "updateSentCount": 0,
                                    "updateReceivedCount": 0,
                                    "withdrawlSentCount": 0,
                                    "withdrawlReceivedCount": 0
                                },
                                "ipv6Route": {
                                    "updateSentCount": 0,
                                    "updateReceivedCount": 0,
                                    "withdrawlSentCount": 0,
                                    "withdrawlReceivedCount": 0
                                },
                                "lastUpdated": "2016-06-16T04:56:29.6397721Z"
                            },
                            "isGenerated": false
                        }
                    },
                    {
                        "resourceRef": "/VirtualGateways/VirtualGateway_1/BgpRouters/router1/BgpPeers/Peer2",
                        "resourceId": "Peer2",
                        "etag": "W/\"5fb62acf-04c7-4071-9f06-c89ea8b0b1b0\"",
                        "instanceId": "d85b9574-8d53-4b70-8b4b-4053eaeeba60",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "asNumber": "1236",
                            "extAsNumber": "0.1236",
                            "peerIpAddress": "40.1.2.4",
                            "connectionState": "Disconnected",
                            "statistics": {
                                "tcpConnectionClosed": "2016-06-15T21:56:12.053-07:00",
                                "openMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "notificationMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "keepAliveMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "routeRefreshMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "updateMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "ipv4Route": {
                                    "updateSentCount": 0,
                                    "updateReceivedCount": 0,
                                    "withdrawlSentCount": 0,
                                    "withdrawlReceivedCount": 0
                                },
                                "ipv6Route": {
                                    "updateSentCount": 0,
                                    "updateReceivedCount": 0,
                                    "withdrawlSentCount": 0,
                                    "withdrawlReceivedCount": 0
                                },
                                "lastUpdated": "2016-06-16T04:56:29.6397721Z"
                            },
                            "isGenerated": false
                        }
                    },
                    {
                        "resourceRef": "/VirtualGateways/VirtualGateway_1/BgpRouters/router1/BgpPeers/Peer3",
                        "resourceId": "Peer3",
                        "etag": "W/\"5fb62acf-04c7-4071-9f06-c89ea8b0b1b0\"",
                        "instanceId": "3b7e4db3-c415-4b06-8d0a-b2138142a8ff",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "asNumber": "1236",
                            "extAsNumber": "0.1236",
                            "peerIpAddress": "40.1.3.4",
                            "connectionState": "Disconnected",
                            "statistics": {
                                "tcpConnectionClosed": "2016-06-15T21:56:14.232-07:00",
                                "openMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "notificationMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "keepAliveMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "routeRefreshMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "updateMessageStats": {
                                    "sentCount": 0,
                                    "receivedCount": 0
                                },
                                "ipv4Route": {
                                    "updateSentCount": 0,
                                    "updateReceivedCount": 0,
                                    "withdrawlSentCount": 0,
                                    "withdrawlReceivedCount": 0
                                },
                                "ipv6Route": {
                                    "updateSentCount": 0,
                                    "updateReceivedCount": 0,
                                    "withdrawlSentCount": 0,
                                    "withdrawlReceivedCount": 0
                                },
                                "lastUpdated": "2016-06-16T04:56:29.6397721Z"
                            },
                            "isGenerated": false
                        }
                    }
                ],
                "configurationState": {
                    "status": "Success",
                    "lastUpdatedTime": "2016-06-15T21:34:32.1843967-07:00"
                }
            }
        }
    ],
    "nextLink": ""
}
